<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/edit"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="91dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/allClearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stack1"
        app:layout_constraintTop_toTopOf="@+id/stack3" />

    <TextView
        android:id="@+id/stack4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="89dp"
        android:text="4:"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/stack3"
        app:layout_constraintEnd_toEndOf="@+id/stack3"
        app:layout_constraintStart_toStartOf="@+id/stack3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stack3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="3:"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/stack2"
        app:layout_constraintEnd_toEndOf="@+id/stack1"
        app:layout_constraintStart_toStartOf="@+id/stack2"
        app:layout_constraintTop_toBottomOf="@+id/stack4" />

    <TextView
        android:id="@+id/stack2"
        android:layout_width="117dp"
        android:layout_height="0dp"
        android:text="2:"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/stack1"
        app:layout_constraintStart_toStartOf="@+id/stack1"
        app:layout_constraintTop_toBottomOf="@+id/stack3" />

    <TextView
        android:id="@+id/stack1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="93dp"
        android:text="1:"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/swapButton"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stack2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="1"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dotButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:text="2"
        app:layout_constraintBottom_toTopOf="@+id/dotButton"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="4"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:text="5"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="1dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="3dp"
        android:text="@string/_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/sqrtButton" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplyButton" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:text="@string/substract"
        app:layout_constraintEnd_toStartOf="@+id/sqrtButton"
        app:layout_constraintStart_toEndOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/divideButton" />


    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dotButton"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="*"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintEnd_toStartOf="@+id/divideButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swapButton" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:text="/"
        app:layout_constraintEnd_toStartOf="@+id/powerButton"
        app:layout_constraintStart_toEndOf="@+id/multiplyButton"
        app:layout_constraintTop_toBottomOf="@+id/dropButton" />

    <Button
        android:id="@+id/dotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:text="."
        app:layout_constraintEnd_toStartOf="@+id/enter"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toTopOf="@+id/enter" />

    <Button
        android:id="@+id/allClearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="AC"
        app:layout_constraintBottom_toTopOf="@+id/oppositeButton"
        app:layout_constraintStart_toStartOf="@+id/dropButton" />

    <Button
        android:id="@+id/swapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="SWAP"
        app:layout_constraintBottom_toTopOf="@+id/multiplyButton"
        app:layout_constraintEnd_toStartOf="@+id/dropButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stack1" />

    <Button
        android:id="@+id/dropButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:text="DROP"
        app:layout_constraintEnd_toStartOf="@+id/oppositeButton"
        app:layout_constraintStart_toEndOf="@+id/swapButton"
        app:layout_constraintTop_toBottomOf="@+id/allClearButton" />

    <Button
        android:id="@+id/oppositeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="+/-"
        app:layout_constraintBottom_toBottomOf="@+id/swapButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dropButton"
        app:layout_constraintTop_toTopOf="@+id/swapButton" />

    <Button
        android:id="@+id/sqrtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="√"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/powerButton" />

    <Button
        android:id="@+id/powerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="^"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divideButton"
        app:layout_constraintTop_toBottomOf="@+id/oppositeButton" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="47dp"
        android:text="MENU"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>